--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 << unity obj loader >>
-Project home: https://github.com/hammmm/unity-obj-loader
+Xavis' project home: https://github.com/hammmm/unity-obj-loader
 
+Fork of: https://github.com/hammmm/unity-obj-loader with quads support and some texture crash fixes
 This project is to achieve good-enough runtime OBJ file importing for Unity3D,
 based on Bartek Drozdz's OBJ library v1.2.
 http://www.everyday3d.com/blog/index.php/2010/05/24/loading-3d-models-runtime-unity3d/
@@ -13,4 +14,3 @@ Notes:
  - please put all texture files on the same directory of . obj file.
  - please use use this form of URL for local files. ex) file:///Users/someone/somepath/model.obj
  - Bump map is not correctly working. TODO: convert hight map to normal map, make tangent data.
-
